experiment2_test/parser.output
Terminals unused in grammar

   ELSE
   LBRACE
   RBRACE
   COMMA


语法

    0 $accept: P $end

    1 P: L
    2  | L P

    3 L: S SEM

    4 S: ID ASSIGN E
    5  | IF C THEN S
    6  | WHILE C DO S

    7 C: E GT E
    8  | E LT E
    9  | E ASSIGN E

   10 E: E ADD T
   11  | E SUB T
   12  | T

   13 T: F
   14  | T MUL F
   15  | T DIV F

   16 F: LPAREN E RPAREN
   17  | ID
   18  | INT8
   19  | INT10
   20  | INT16


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 4 17
INT8 (259) 18
INT10 (260) 19
INT16 (261) 20
IF (262) 5
THEN (263) 5
ELSE (264)
WHILE (265) 6
DO (266) 6
ADD (267) 10
SUB (268) 11
MUL (269) 14
DIV (270) 15
GT (271) 7
LT (272) 8
ASSIGN (273) 4 9
LPAREN (274) 16
RPAREN (275) 16
LBRACE (276)
RBRACE (277)
SEM (278) 3
COMMA (279)


Nonterminals, with rules where they appear

$accept (25)
    左： 0
P (26)
    左： 1 2, 右： 0 2
L (27)
    左： 3, 右： 1 2
S (28)
    左： 4 5 6, 右： 3 5 6
C (29)
    左： 7 8 9, 右： 5 6
E (30)
    左： 10 11 12, 右： 4 7 8 9 10 11 16
T (31)
    左： 13 14 15, 右： 10 11 12 14 15
F (32)
    左： 16 17 18 19 20, 右： 13 14 15


State 0

    0 $accept: . P $end

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    P  转到状态 4
    L  转到状态 5
    S  转到状态 6


State 1

    4 S: ID . ASSIGN E

    ASSIGN  shift, and go to state 7


State 2

    5 S: IF . C THEN S

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    C  转到状态 13
    E  转到状态 14
    T  转到状态 15
    F  转到状态 16


State 3

    6 S: WHILE . C DO S

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    C  转到状态 17
    E  转到状态 14
    T  转到状态 15
    F  转到状态 16


State 4

    0 $accept: P . $end

    $end  shift, and go to state 18


State 5

    1 P: L .
    2  | L . P

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    $default  reduce using rule 1 (P)

    P  转到状态 19
    L  转到状态 5
    S  转到状态 6


State 6

    3 L: S . SEM

    SEM  shift, and go to state 20


State 7

    4 S: ID ASSIGN . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    E  转到状态 21
    T  转到状态 15
    F  转到状态 16


State 8

   17 F: ID .

    $default  reduce using rule 17 (F)


State 9

   18 F: INT8 .

    $default  reduce using rule 18 (F)


State 10

   19 F: INT10 .

    $default  reduce using rule 19 (F)


State 11

   20 F: INT16 .

    $default  reduce using rule 20 (F)


State 12

   16 F: LPAREN . E RPAREN

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    E  转到状态 22
    T  转到状态 15
    F  转到状态 16


State 13

    5 S: IF C . THEN S

    THEN  shift, and go to state 23


State 14

    7 C: E . GT E
    8  | E . LT E
    9  | E . ASSIGN E
   10 E: E . ADD T
   11  | E . SUB T

    ADD     shift, and go to state 24
    SUB     shift, and go to state 25
    GT      shift, and go to state 26
    LT      shift, and go to state 27
    ASSIGN  shift, and go to state 28


State 15

   12 E: T .
   14 T: T . MUL F
   15  | T . DIV F

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30

    $default  reduce using rule 12 (E)


State 16

   13 T: F .

    $default  reduce using rule 13 (T)


State 17

    6 S: WHILE C . DO S

    DO  shift, and go to state 31


State 18

    0 $accept: P $end .

    $default  接受


State 19

    2 P: L P .

    $default  reduce using rule 2 (P)


State 20

    3 L: S SEM .

    $default  reduce using rule 3 (L)


State 21

    4 S: ID ASSIGN E .
   10 E: E . ADD T
   11  | E . SUB T

    ADD  shift, and go to state 24
    SUB  shift, and go to state 25

    $default  reduce using rule 4 (S)


State 22

   10 E: E . ADD T
   11  | E . SUB T
   16 F: LPAREN E . RPAREN

    ADD     shift, and go to state 24
    SUB     shift, and go to state 25
    RPAREN  shift, and go to state 32


State 23

    5 S: IF C THEN . S

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    S  转到状态 33


State 24

   10 E: E ADD . T

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    T  转到状态 34
    F  转到状态 16


State 25

   11 E: E SUB . T

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    T  转到状态 35
    F  转到状态 16


State 26

    7 C: E GT . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    E  转到状态 36
    T  转到状态 15
    F  转到状态 16


State 27

    8 C: E LT . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    E  转到状态 37
    T  转到状态 15
    F  转到状态 16


State 28

    9 C: E ASSIGN . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    E  转到状态 38
    T  转到状态 15
    F  转到状态 16


State 29

   14 T: T MUL . F

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    F  转到状态 39


State 30

   15 T: T DIV . F

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    LPAREN  shift, and go to state 12

    F  转到状态 40


State 31

    6 S: WHILE C DO . S

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    S  转到状态 41


State 32

   16 F: LPAREN E RPAREN .

    $default  reduce using rule 16 (F)


State 33

    5 S: IF C THEN S .

    $default  reduce using rule 5 (S)


State 34

   10 E: E ADD T .
   14 T: T . MUL F
   15  | T . DIV F

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30

    $default  reduce using rule 10 (E)


State 35

   11 E: E SUB T .
   14 T: T . MUL F
   15  | T . DIV F

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30

    $default  reduce using rule 11 (E)


State 36

    7 C: E GT E .
   10 E: E . ADD T
   11  | E . SUB T

    ADD  shift, and go to state 24
    SUB  shift, and go to state 25

    $default  reduce using rule 7 (C)


State 37

    8 C: E LT E .
   10 E: E . ADD T
   11  | E . SUB T

    ADD  shift, and go to state 24
    SUB  shift, and go to state 25

    $default  reduce using rule 8 (C)


State 38

    9 C: E ASSIGN E .
   10 E: E . ADD T
   11  | E . SUB T

    ADD  shift, and go to state 24
    SUB  shift, and go to state 25

    $default  reduce using rule 9 (C)


State 39

   14 T: T MUL F .

    $default  reduce using rule 14 (T)


State 40

   15 T: T DIV F .

    $default  reduce using rule 15 (T)


State 41

    6 S: WHILE C DO S .

    $default  reduce using rule 6 (S)
